# FanControl

./: CMakeLists.txt  README.md  backend.cpp  backend.cpp.backup  backend.h  main.cpp  modbus_relay.cpp  modbus_relay.h
frontend/: defa.html  fan_control.html  footer.html  index.html  light_timers.html  nav.html
frontend/css/: global.css
frontend/scripts/: global.js
